# cosmOS

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/arch/amd64/: boot.S  entry.S  memory.h  multiboot.S  multiboot.h
src/util/: compiler.h
tools/: kernel.lds
tools/docker/: Dockerfile  build.sh
tools/iso/: grub.cfg
tools/scripts/: mkiso.sh
